--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="creator-name">
-            <marquee scrollamount="10">Weather</marquee>
+            <marquee scrollamount="10">🌤️ ⛅ 🌥️ 🌦️ ☁️ 🌧️ ⛈️ 🌩️ ☀️ 🌞 ❄️ 🌨️💨 🌪️ 🌫️ 🌈 ☔ 💧 💦 🔅 🔆</marquee>
         </div>
         <h1 id="cityName">Weather App</h1>
         <!-- Search Feature -->
